Update image paths to relative URLs

--- a/index.html
+++ b/index.html
@@ -805,37 +805,37 @@
                 
                 <div class="gallery-grid">
                     <div class="gallery-item">
-                        <img src="C:\Users\rappu\OneDrive\Desktop\mini\photos\WhatsApp Image 2026-02-13 at 4.37.11 PM (3).jpeg" alt="Memory 1">
+                        <img src="photos\WhatsApp Image 2026-02-13 at 4.37.11 PM (3).jpeg" alt="Memory 1">
                         <div class="gallery-caption">
                             <i class="fas fa-heart"></i> Our First outing <i class="fas fa-heart"></i>
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="C:\Users\rappu\OneDrive\Desktop\mini\photos\WhatsApp Image 2026-02-13 at 7.12.02 PM.jpeg" alt="Memory 2">
+                        <img src="photos\WhatsApp Image 2026-02-13 at 7.12.02 PM.jpeg" alt="Memory 2">
                         <div class="gallery-caption">
                             <i class="fas fa-heart"></i> Beach out <i class="fas fa-heart"></i>
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="C:\Users\rappu\OneDrive\Desktop\mini\photos\WhatsApp Image 2026-02-13 at 4.37.11 PM (1).jpeg" alt="Memory 3">
+                        <img src="photos\WhatsApp Image 2026-02-13 at 4.37.11 PM (1).jpeg" alt="Memory 3">
                         <div class="gallery-caption">
                             <i class="fas fa-heart"></i> Special Day <i class="fas fa-heart"></i>
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="C:\Users\rappu\OneDrive\Desktop\mini\photos\WhatsApp Image 2026-02-13 at 4.29.00 PM.jpeg" alt="Memory 4">
+                        <img src="photos\WhatsApp Image 2026-02-13 at 4.29.00 PM.jpeg" alt="Memory 4">
                         <div class="gallery-caption">
                             <i class="fas fa-heart"></i> Movie Date <i class="fas fa-heart"></i>
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="C:\Users\rappu\OneDrive\Desktop\mini\photos\WhatsApp Image 2026-02-13 at 4.26.51 PM.jpeg" alt="Memory 5">
+                        <img src="photos\WhatsApp Image 2026-02-13 at 4.26.51 PM.jpeg" alt="Memory 5">
                         <div class="gallery-caption">
                             <i class="fas fa-heart"></i> Together <i class="fas fa-heart"></i>
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="C:\Users\rappu\OneDrive\Desktop\mini\photos\WhatsApp Image 2026-02-13 at 7.59.12 PM.jpeg" alt="Memory 6">
+                        <img src="photos\WhatsApp Image 2026-02-13 at 7.59.12 PM.jpeg" alt="Memory 6">
                         <div class="gallery-caption">
                             <i class="fas fa-heart"></i> Us <i class="fas fa-heart"></i>
                         </div>
@@ -952,35 +952,35 @@
                 
                 <div class="cringe-grid">
                     <div class="cringe-item">
-                        <img src="C:\Users\rappu\OneDrive\Desktop\mini\photos\WhatsApp Image 2026-02-13 at 10.47.28 PM (3).jpeg" alt="Cringe 1">
+                        <img src="photos\WhatsApp Image 2026-02-13 at 10.47.28 PM (3).jpeg" alt="Cringe 1">
                         <div class="cringe-sticker">🤪</div>
                     </div>
                     <div class="cringe-item">
-                        <img src="C:\Users\rappu\OneDrive\Desktop\mini\photos\WhatsApp Image 2026-02-13 at 10.47.28 PM (4).jpeg" alt="Cringe 2">
+                        <img src="photos\WhatsApp Image 2026-02-13 at 10.47.28 PM (4).jpeg" alt="Cringe 2">
                         <div class="cringe-sticker">😜</div>
                     </div>
                     <div class="cringe-item">
-                        <img src="C:\Users\rappu\OneDrive\Desktop\mini\photos\WhatsApp Image 2026-02-13 at 10.47.28 PM (5).jpeg" alt="Cringe 3">
+                        <img src="photos\WhatsApp Image 2026-02-13 at 10.47.28 PM (5).jpeg" alt="Cringe 3">
                         <div class="cringe-sticker">🥴</div>
                     </div>
                     <div class="cringe-item">
-                        <img src="C:\Users\rappu\OneDrive\Desktop\mini\photos\WhatsApp Image 2026-02-13 at 10.47.28 PM (6).jpeg" alt="Cringe 4">
+                        <img src="photos\WhatsApp Image 2026-02-13 at 10.47.28 PM (6).jpeg" alt="Cringe 4">
                         <div class="cringe-sticker">😝</div>
                     </div>
                     <div class="cringe-item">
-                        <img src="C:\Users\rappu\OneDrive\Desktop\mini\photos\WhatsApp Image 2026-02-13 at 10.47.28 PM (7).jpeg" alt="Cringe 5">
+                        <img src="photos\WhatsApp Image 2026-02-13 at 10.47.28 PM (7).jpeg" alt="Cringe 5">
                         <div class="cringe-sticker">🤪</div>
                     </div>
                     <div class="cringe-item">
-                        <img src="C:\Users\rappu\OneDrive\Desktop\mini\photos\WhatsApp Image 2026-02-13 at 10.47.28 PM (8).jpeg" alt="Cringe 6">
+                        <img src="photos\WhatsApp Image 2026-02-13 at 10.47.28 PM (8).jpeg" alt="Cringe 6">
                         <div class="cringe-sticker">🥳</div>
                     </div>
                     <div class="cringe-item">
-                        <img src="C:\Users\rappu\OneDrive\Desktop\mini\photos\WhatsApp Image 2026-02-13 at 10.47.28 PM (9).jpeg" alt="Cringe 7">
+                        <img src="photos\WhatsApp Image 2026-02-13 at 10.47.28 PM (9).jpeg" alt="Cringe 7">
                         <div class="cringe-sticker">😎</div>
                     </div>
                     <div class="cringe-item">
-                        <img src="C:\Users\rappu\OneDrive\Desktop\mini\photos\WhatsApp Image 2026-02-13 at 10.47.28 PM.jpeg" alt="Cringe 8">
+                        <img src="photos\WhatsApp Image 2026-02-13 at 10.47.28 PM.jpeg" alt="Cringe 8">
                         <div class="cringe-sticker">🤓</div>
                     </div>
                 </div>
